--- a/tmpl/csv.go.tmpl
+++ b/tmpl/csv.go.tmpl
@@ -14,12 +14,12 @@ type {{ $s.Name }}CSV struct {
 	once sync.Once
 }
 
-func (t {{ $s.Name }}CSV) ReadChan() <-chan {{ $s.Name }} {
+func (t *{{ $s.Name }}CSV) ReadChan() <-chan {{ $s.Name }} {
 	t.once.Do(func() { t.ch = make(chan {{ $s.Name }}) })
 	return t.ch
 }
 
-func (t {{ $s.Name }}CSV) UnmarshalCSV(r *csv.Reader) error {
+func (t *{{ $s.Name }}CSV) UnmarshalCSV(r *csv.Reader) error {
 	t.once.Do(func() { t.ch = make(chan {{ $s.Name }}) })
 	defer close(t.ch)
 
